--- a/index.html
+++ b/index.html
@@ -5,14 +5,196 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B9A3-Hockeys</title>
+    <!-- tailwind and daisy UI -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.12/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- tailwind custom color -->
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                        'button-color': '#FF4240',
+                        'text-color': '#131318',
+                    }
+                }
+            }
+        }
+    </script>
+
+    <!-- manrope google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <style>
+        .font-manrope {
+            font-family: "Manrope", system-ui;
+        }
+    </style>
 </head>
 
-<body>
-    <header>
-
+<body class="font-manrope">
+    <header class="container mx-auto mt-3 lg:mt-12">
+        <nav>
+            <div class="navbar bg-base-100">
+                <div class="navbar-start">
+                    <div class="dropdown">
+                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M4 6h16M4 12h8m-8 6h16" />
+                            </svg>
+                        </div>
+                        <ul tabindex="0"
+                            class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                            <li><a>Home</a></li>
+                            <li><a>About</a></li>
+                            <li><a>Pages</a></li>
+                            <li><a>Blog</a></li>
+                            <li><a>Contact</a></li>
+                        </ul>
+                    </div>
+                    <a class="btn btn-ghost text-2xl lg:text-4xl font-extrabold">Hockey<span>’</span>s</a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                    <ul class="menu menu-horizontal px-1">
+                        <li class="hover:text-[#FF4240] text-base font-bold"><a>Home</a></li>
+                        <li class="hover:text-[#FF4240] text-base font-bold"><a>About</a></li>
+                        <li class="hover:text-[#FF4240] text-base font-bold"><a>Pages</a></li>
+                        <li class="hover:text-[#FF4240] text-base font-bold"><a>Blog</a></li>
+                        <li class="hover:text-[#FF4240] text-base font-bold"><a>Contact</a></li>
+                    </ul>
+                </div>
+                <div class="navbar-end">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="size-6 mr-4 hidden lg:block">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+                    </svg>
+                    <a class="btn bg-button-color text-white text-lg lg:text-xl font-bold ">Get Ticket</a>
+                </div>
+            </div>
+        </nav>
+        <!-- slider or carousel -->
+        <div class="carousel sm:w-[335] my-12 mx-5">
+            <!-- slide 1 -->
+            <div id="slide1" class="carousel-item relative w-full">
+                <img src="images/1.png" class="w-full" />
+                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide1" class="btn btn-circle bg-[#131318] text-white">❮</a>
+                    <a href="#slide2" class="btn btn-circle bg-[#131318] text-white">❯</a>
+                </div>
+            </div>
+            <!-- slide 2 -->
+            <div id="slide2" class="carousel-item relative w-full">
+                <img src="images/4.png" class="w-full" />
+                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide2" class="btn btn-circle bg-[#131318] text-white">❮</a>
+                    <a href="#slide1" class="btn btn-circle bg-[#131318] text-white">❯</a>
+                </div>
+            </div>
+        </div>
     </header>
-    <main>
-
+    <main class="container mx-auto">
+        <!-- professional section -->
+        <section class=" my-10 lg:my-24 text-center mx-5">
+            <h2 class="text-text-color text-xl lg:text-4xl font-extrabold mb-6">Professional Hockeys Club</h2>
+            <p class="text-[#13131899] text-sm lg:text-base max-w-72 lg:max-w-xl mx-auto">Dit amet consectetur.
+                Condimentum
+                dignissim
+                adipiscing
+                aliquam
+                turpis placerat
+                dolor. Purus urna in sit
+                nullam proin. </p>
+        </section>
+        <!-- radial progress -->
+        <section class="my-6 lg:my-12 mx-5">
+            <div class="grid grid-cols-1 lg:grid-cols-4">
+                <div class="text-center mb-6">
+                    <div class="radial-progress text-[#FF4240] mb-6" style="--value:87;" role="progressbar"> <span
+                            class="text-[#131318] font-extrabold">87%</span>
+                    </div>
+                    <div>
+                        <h4 class="text-text-color font-semibold text-xl mb-4">Prayer Facility</h4>
+                        <p class="text-base w-64 mx-auto">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                    </div>
+                </div>
+                <div class="text-center mb-6">
+                    <div class="radial-progress text-[#49D293] mb-6" style="--value:87;" role="progressbar"> <span
+                            class="text-[#131318] font-extrabold">95%</span>
+                    </div>
+                    <div>
+                        <h4 class="text-text-color font-semibold text-xl mb-4">Experienced Coach</h4>
+                        <p class="text-base w-64 mx-auto">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                    </div>
+                </div>
+                <div class="text-center mb-6">
+                    <div class="radial-progress text-[#FFB546] mb-6" style="--value:87;" role="progressbar"> <span
+                            class="text-[#131318] font-extrabold">90%</span>
+                    </div>
+                    <div>
+                        <h4 class="text-text-color font-semibold text-xl mb-4">Senior Player</h4>
+                        <p class="text-base w-64 mx-auto">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                    </div>
+                </div>
+                <div class="text-center mb-6">
+                    <div class="radial-progress text-[#4C8DF1] mb-6" style="--value:87;" role="progressbar"> <span
+                            class="text-[#131318] font-extrabold">80%</span>
+                    </div>
+                    <div>
+                        <h4 class="text-text-color font-semibold text-xl mb-4">Training Ground</h4>
+                        <p class="text-base w-64 mx-auto">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- program section -->
+        <section class="my-10 lg:my-24 text-center mx-5">
+            <h2 class="text-text-color text-xl lg:text-4xl font-extrabold mb-6">Program Sections</h2>
+            <p class="text-[#13131899] text-sm lg:text-base max-w-72 lg:max-w-xl mx-auto">Dit amet consectetur.
+                Condimentum
+                dignissim
+                adipiscing
+                aliquam
+                turpis placerat
+                dolor. Purus urna in sit
+                nullam proin. </p>
+        </section>
+        <section class="mx-5">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+                <div class=" bg-no-repeat lg:bg-cover h-[244] lg:h-[338] lg:pt-20 lg:px-10 lg:py-10 rounded-2xl px-6 py-6"
+                    style="background-image: url('/images/2.png');">
+                    <h2 class="text-2xl font-extrabold text-white lg:mb-4">Junior Program</h2>
+                    <p class="text-base font-medium text-white mb-6 max-w-md">Dolor sit amet consectetur. Ut
+                        urna diam
+                        quis
+                        sagittis.
+                        Elit elit
+                        enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue
+                        sed et in.</p>
+                    <button
+                        class="btn btn-active bg-button-color border-none px-5 py-2 text-white text-xl font-bold lg:mb-10">Register
+                        Now!</button>
+                </div>
+                <div class=" bg-no-repeat lg:bg-cover lg:h-[338] h-[244] lg:pt-20 lg:px-10 lg:py-10 rounded-2xl px-6 py-6"
+                    style="background-image: url('/images/3.png');">
+                    <h2 class="text-2xl font-extrabold text-white mb-4">Junior Program</h2>
+                    <p class="text-base font-medium text-white mb-6 max-w-md">Dolor sit amet consectetur. Ut urna diam
+                        quis
+                        sagittis.
+                        Elit elit
+                        enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue
+                        sed et in.</p>
+                    <button
+                        class="btn btn-active bg-button-color border-none px-5 py-2 text-white text-xl font-bold mb-10">Register
+                        Now!</button>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
