finished all section

--- a/index.html
+++ b/index.html
@@ -533,6 +533,94 @@
                     nullam proin. </p>
             </div>
         </section>
+        <!-- textarea section -->
+        <section class="my-12 mx-5">
+            <div class="grid lg:grid-cols-2 grid-cols-1 gap-6">
+                <div>
+                    <div class="border-2 border[#13131833] rounded-2xl px-6 lg:px-12 pt-6 lg:pt-12 pb-4 lg:pb-6 flex flex-col
+                    gap-6">
+                        <div class="bg-[rgba(188,237,109,0.1)] px-6 lg:px-8 py-6 lg:pt-8 lg:pb-12 rounded-2xl">
+                            <div class="pb-6">
+                                <img src="images/Group 1171275317.png" alt="">
+                            </div>
+                            <p class="pb-6 text-[#13131899]">Phone Number</p>
+                            <h4 class="text-[#131318] font-extrabold">(+62) 124-321-543</h4>
+                        </div>
+                        <div class="bg-[rgba(253,221,95,0.1)] px-6 lg:px-8 py-6 lg:pt-8 lg:pb-12 rounded-2xl">
+                            <div class="pb-6">
+                                <img src="images/Group 1171275318.png" alt="">
+                            </div>
+                            <p class="pb-6 text-[#13131899]">Email</p>
+                            <h4 class="text-[#131318] font-extrabold">hockey@suppot.com</h4>
+                        </div>
+                        <div class="bg-[rgba(98,158,243,.1)] px-6 lg:px-8 py-6 lg:pt-8 lg:pb-12.'2r' rounded-2xl">
+                            <div class="pb-6">
+                                <img src="images/Group 1171275321.png" alt="">
+                            </div>
+                            <P class="pb-6 text-[#13131899]">Location</P>
+                            <h4 class="text-[#131318] font-extrabold">152/1 Mohakhali Wireless Gate</h4>
+                        </div>
+
+                    </div>
+                </div>
+                <div>
+                    <div class="flex lg:flex-row flex-col lg:gap-6 gap-5 col-span-2 lg:mb-6">
+                        <label class="form-control w-full ">
+                            <div class="label">
+                                <span class="label-text text-xl font-bold">Your Name</span>
+                            </div>
+                            <input type="text" placeholder="Enter your full name"
+                                class="input input-bordered w-full  bg-[#13131808] border border-[#13131808] placeholder-[#1313184D] text-base" />
+                        </label>
+
+                        <label class="form-control w-full ">
+                            <div class="label">
+                                <span class="label-text text-xl font-bold">Your Email</span>
+                            </div>
+                            <input type="text" placeholder="Enter your email"
+                                class="input input-bordered w-full  bg-[#13131808] border border-[#13131808] placeholder-[#1313184D] text-base" />
+                        </label>
+                    </div>
+                    <div class="flex lg:flex-row flex-col lg:gap-6 gap-5 col-span-2 lg:mb-6">
+                        <label class="form-control w-full">
+                            <div class="label">
+                                <span class="label-text text-xl font-bold"> Subject</span>
+                            </div>
+                            <input type="text" placeholder="Enter your subject"
+                                class="input input-bordered w-full  bg-[#13131808] border border-[#13131808] placeholder-[#1313184D] text-base" />
+                        </label>
+                        <label class="form-control w-full">
+                            <div class="label">
+                                <span class="label-text text-xl font-bold">Phone Number</span>
+                            </div>
+                            <input type="text" placeholder="Enter your phone number"
+                                class="input input-bordered w-full  bg-[#13131808] border border-[#13131808] placeholder-[#1313184D] text-base" />
+                        </label>
+                    </div>
+                    <label class="form-control mt-6">
+                        <div class="label">
+                            <span class="label-text text-xl font-bold">Message</span>
+                        </div>
+                        <textarea
+                            class="textarea textarea-bordered h-48 lg:h-96  bg-[#13131808] border border-[#13131808] placeholder-[#1313184D] text-base"
+                            placeholder="Write your message"></textarea>
+                    </label>
+                    <button class="btn bg-button-color text-white font-bold text-xl w-full
+                        mt-8">Send Message</button>
+                </div>
+
+            </div>
+            </div>
+        </section>
+        <section class="my-12">
+            <div class="bg-[#13131808] text-center rounded-xl">
+                <h2 class="text-2xl font-extrabold text-[#131318] pt-9 pb-6">Social Media</h2>
+                <div class="text-2xl flex justify-center items-center gap-8 pb-8">
+                    <i class="fa-brands fa-twitter"></i><i class="fa-brands fa-facebook"></i><i
+                        class="fa-brands fa-instagram"></i><i class="fa-brands fa-github"></i>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
