finished the footer section

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                 <div class="col-span-4 lg:my-8 lg:ml-8 my-6 mx-11">
                     <img src="images/Rectangle 4 (9).png" alt="">
                 </div>
-                <div class="w-full col-span-8 lg:mt-4 lg:pr-10 ml-2 mr-2">
+                <div class="col-span-8 lg:mt-4 lg:pr-10 ml-2 mr-2">
                     <div class="collapse collapse-plus border-b rounded-none border-[#1313181A] px-0 ">
                         <input type="checkbox" name="my-accordion-3" />
                         <div class="collapse-title text-xl font-bold pl-0">Our
@@ -612,7 +612,7 @@
             </div>
             </div>
         </section>
-        <section class="my-12">
+        <section class="my-12 mx-5">
             <div class="bg-[#13131808] text-center rounded-xl">
                 <h2 class="text-2xl font-extrabold text-[#131318] pt-9 pb-6">Social Media</h2>
                 <div class="text-2xl flex justify-center items-center gap-8 pb-8">
@@ -622,6 +622,49 @@
             </div>
         </section>
     </main>
+    <footer class="bg-[#131318]">
+        <div class="text-center grid grid-cols-1 lg:gap-40 lg:grid-cols-3 lg:px-32 lg:py-24 py-10">
+            <div class="pb-10">
+                <h6 class="text-white text-2xl lg:text-3xl font-extrabold pb-4">Get In Touch</h6>
+                <p class="text-white text-base font-medium max-w-80 pb-6 mx-auto">Dit amet consectetur. Condimentum
+                    adipiscing
+                    aliquam turpis
+                    placerat dolor. Purus urna in sit nullam
+                    proin. </p>
+                <p class="text-white text-base font-medium pb-4"><i
+                        class="fa-regular fa-envelope text-[#FF4240] text-base pr-4"></i>
+                    hockeys@support.com</p>
+                <p class="text-white text-base font-medium"><i
+                        class="fa-solid fa-phone text-[#FF4240] text-base pr-4"></i> (+62)
+                    123-321-543</p>
+            </div>
+            <div class="flex flex-row gap-10 lg:gap-40 justify-center pb-10">
+                <div>
+                    <h4 class="text-xl text-white font-bold pb-7">Company</h4>
+                    <h5 class="text-white font-medium text-base">About us <br>
+                        Leadership <br>
+                        Careers <br>
+                        News & Article <br>
+                        Legal Notice</h5>
+                </div>
+                <div>
+                    <h4 class="text-xl text-white font-bold pb-7">Support</h4>
+                    <h5 class="text-white font-medium text-base">Help Center <br>
+                        FAQ <br>
+                        Ticket Support <br>
+                        Contact Us</h5>
+                </div>
+            </div>
+            <div>
+                <h4 class="text-xl text-white font-bold pb-7">Services</h4>
+                <h5 class="text-white font-medium text-base">Academy <br>
+                    Group Lesson <br>
+                    Private Lesson <br>
+                    Hockeys for kids <br>
+                    Hockeys for Adult</h5>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
