change the text color

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                             <li><a>Contact</a></li>
                         </ul>
                     </div>
-                    <a class="btn btn-ghost text-2xl lg:text-4xl font-extrabold">Hockey<span>’</span>s</a>
+                    <a class="btn btn-ghost text-2xl lg:text-4xl font-extrabold">Hockey<span
+                            class="text-button-color">’</span>s</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                     <ul class="menu menu-horizontal px-1">
