finished all section

--- a/index.html
+++ b/index.html
@@ -100,6 +100,20 @@
                 </div>
             </div>
         </div>
+        <!-- <div class="container">
+            <div
+                class="bg-[#131318] absolute lg:w-[566px] lg:h-[165px] w-full h-[137px] rounded-xl lg:px-8 px-4 py-4 lg:py-8">
+                <h1 class="font-manrope text-[#FFFFFF] font-extrabold text-2xl pb-2 lg:pb-4">Meet all the heroes from
+                    the field</h1>
+                <p class="text-[#FFFFFF99] lg:max-w-lg max-w-xs">Dit amet consectetur. Condimentum dignissim adipiscing
+                    aliquam
+                    turpis
+                    placerat dolor. Purus
+                    urna
+                    in
+                    sit nullam proin. </p>
+            </div>
+        </div> -->
     </header>
     <main class="container mx-auto">
         <!-- professional section -->
@@ -236,11 +250,12 @@
         <section class="mx-5">
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
                 <!-- card 1 -->
-                <div class=" border-2 border-[#1313181A] lg:flex  flex-col lg:flex-row rounded-xl">
+                <div
+                    class=" border-2 border-[#1313181A] lg:flex  flex-col lg:flex-row rounded-xl lg:max-w-xl lg:h-[218px]">
                     <figure class="lg:mt-6 lg:mb-5 lg:ml-6 my-6 mx-6">
-                        <img src="images/5.png" alt="Shoes" class="rounded-xl" />
+                        <img src="images/5.png" alt="Shoes" class="rounded-xl w-11/12 lg:w-[180px]" />
                     </figure>
-                    <div class="card-body">
+                    <div class="mt-6 lg:mx-0 mx-5">
                         <div class="flex gap-4">
                             <p class="text-[#13131899]"><i class="fa-solid fa-star text-[#F99808] mr-1"></i> 5.0</p>
                             <p class="text-[#13131899]"><i class="fa-regular fa-eye mr-1 text-[#13131899]"></i>20
@@ -258,10 +273,10 @@
                                 sagittis.
                             </p>
                         </div>
-                        <div class="lg:flex lg:gap-5 items-center">
+                        <div class="lg:flex lg:gap-5 items-center mt-4">
                             <h3 class="text-button-color font-extrabold text-lg">Price - $22.00</h3>
-                            <p class="text-[#89898B]"> <svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                                    viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                            <p class="text-[#89898B] mt-4 mb-6 lg:mt-0 lg:mb-0"> <svg xmlns="http://www.w3.org/2000/svg"
+                                    fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
                                     class="size-6 inline-block text-[#89898B]">
                                     <path stroke-linecap="round" stroke-linejoin="round"
                                         d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
@@ -271,11 +286,12 @@
                     </div>
                 </div>
                 <!-- card 2 -->
-                <div class=" border-2 border-[#1313181A] lg:flex  flex-col lg:flex-row rounded-xl">
+                <div
+                    class=" border-2 border-[#1313181A] lg:flex  flex-col lg:flex-row rounded-xl lg:max-w-xl lg:h-[218px]">
                     <figure class="lg:mt-6 lg:mb-5 lg:ml-6 my-6 mx-6">
-                        <img src="images/6.png" alt="Shoes" class="rounded-xl" />
+                        <img src="images/6.png" alt="Shoes" class="rounded-xl w-11/12 lg:w-[180px]" />
                     </figure>
-                    <div class="card-body">
+                    <div class="mt-6 lg:mx-0 mx-5">
                         <div class="flex gap-4">
                             <p class="text-[#13131899]"><i class="fa-solid fa-star text-[#F99808] mr-1"></i> 5.0</p>
                             <p class="text-[#13131899]"><i class="fa-regular fa-eye mr-1 text-[#13131899]"></i>20
@@ -293,10 +309,10 @@
                                 sagittis.
                             </p>
                         </div>
-                        <div class="lg:flex lg:gap-5 items-center">
+                        <div class="lg:flex lg:gap-5 items-center mt-4">
                             <h3 class="text-button-color font-extrabold text-lg">Price - $22.00</h3>
-                            <p class="text-[#89898B]"> <svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                                    viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                            <p class="text-[#89898B] mt-4 mb-6 lg:mt-0 lg:mb-0"> <svg xmlns="http://www.w3.org/2000/svg"
+                                    fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
                                     class="size-6 inline-block text-[#89898B]">
                                     <path stroke-linecap="round" stroke-linejoin="round"
                                         d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
@@ -306,11 +322,12 @@
                     </div>
                 </div>
                 <!-- card 3 -->
-                <div class=" border-2 border-[#1313181A] lg:flex  flex-col lg:flex-row rounded-xl">
+                <div
+                    class=" border-2 border-[#1313181A] lg:flex  flex-col lg:flex-row rounded-xl lg:max-w-xl lg:h-[218px]">
                     <figure class="lg:mt-6 lg:mb-5 lg:ml-6 my-6 mx-6">
-                        <img src="images/7.png" alt="Shoes" class="rounded-xl" />
+                        <img src="images/7.png" alt="Shoes" class="rounded-xl w-11/12 lg:w-[180px]" />
                     </figure>
-                    <div class="card-body">
+                    <div class="mt-6 lg:mx-0 mx-5">
                         <div class="flex gap-4">
                             <p class="text-[#13131899]"><i class="fa-solid fa-star text-[#F99808] mr-1"></i> 5.0</p>
                             <p class="text-[#13131899]"><i class="fa-regular fa-eye mr-1 text-[#13131899]"></i>20
@@ -328,10 +345,10 @@
                                 sagittis.
                             </p>
                         </div>
-                        <div class="lg:flex lg:gap-5 items-center">
+                        <div class="lg:flex lg:gap-5 items-center mt-4">
                             <h3 class="text-button-color font-extrabold text-lg">Price - $22.00</h3>
-                            <p class="text-[#89898B]"> <svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                                    viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                            <p class="text-[#89898B] mt-4 mb-6 lg:mt-0 lg:mb-0"> <svg xmlns="http://www.w3.org/2000/svg"
+                                    fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
                                     class="size-6 inline-block text-[#89898B]">
                                     <path stroke-linecap="round" stroke-linejoin="round"
                                         d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
@@ -341,11 +358,12 @@
                     </div>
                 </div>
                 <!-- card 4 -->
-                <div class=" border-2 border-[#1313181A] lg:flex  flex-col lg:flex-row rounded-xl">
+                <div
+                    class=" border-2 border-[#1313181A] lg:flex  flex-col lg:flex-row rounded-xl lg:max-w-xl lg:h-[218px]">
                     <figure class="lg:mt-6 lg:mb-5 lg:ml-6 my-6 mx-6">
-                        <img src="images/8.png" alt="Shoes" class="rounded-xl" />
+                        <img src="images/8.png" alt="Shoes" class="rounded-xl w-11/12 lg:w-[180px]" />
                     </figure>
-                    <div class="card-body">
+                    <div class="mt-6 lg:mx-0 mx-5">
                         <div class="flex gap-4">
                             <p class="text-[#13131899]"><i class="fa-solid fa-star text-[#F99808] mr-1"></i> 5.0</p>
                             <p class="text-[#13131899]"><i class="fa-regular fa-eye mr-1 text-[#13131899]"></i>20
@@ -363,10 +381,10 @@
                                 sagittis.
                             </p>
                         </div>
-                        <div class="lg:flex lg:gap-5 items-center">
+                        <div class="lg:flex lg:gap-5 items-center mt-4">
                             <h3 class="text-button-color font-extrabold text-lg">Price - $22.00</h3>
-                            <p class="text-[#89898B]"> <svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                                    viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                            <p class="text-[#89898B] mt-4 mb-6 lg:mt-0 lg:mb-0"> <svg xmlns="http://www.w3.org/2000/svg"
+                                    fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
                                     class="size-6 inline-block text-[#89898B]">
                                     <path stroke-linecap="round" stroke-linejoin="round"
                                         d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
@@ -376,11 +394,12 @@
                     </div>
                 </div>
                 <!-- card 5 -->
-                <div class=" border-2 border-[#1313181A] lg:flex  flex-col lg:flex-row rounded-xl">
+                <div
+                    class=" border-2 border-[#1313181A] lg:flex  flex-col lg:flex-row rounded-xl lg:max-w-xl lg:h-[218px]">
                     <figure class="lg:mt-6 lg:mb-5 lg:ml-6 my-6 mx-6">
-                        <img src="images/9.png" alt="Shoes" class="rounded-xl" />
+                        <img src="images/9.png" alt="Shoes" class="rounded-xl w-11/12 lg:w-[180px]" />
                     </figure>
-                    <div class="card-body">
+                    <div class="mt-6 lg:mx-0 mx-5">
                         <div class="flex gap-4">
                             <p class="text-[#13131899]"><i class="fa-solid fa-star text-[#F99808] mr-1"></i> 5.0</p>
                             <p class="text-[#13131899]"><i class="fa-regular fa-eye mr-1 text-[#13131899]"></i>20
@@ -398,10 +417,10 @@
                                 sagittis.
                             </p>
                         </div>
-                        <div class="lg:flex lg:gap-5 items-center">
+                        <div class="lg:flex lg:gap-5 items-center mt-4">
                             <h3 class="text-button-color font-extrabold text-lg">Price - $22.00</h3>
-                            <p class="text-[#89898B]"> <svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                                    viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                            <p class="text-[#89898B] mt-4 mb-6 lg:mt-0 lg:mb-0"> <svg xmlns="http://www.w3.org/2000/svg"
+                                    fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
                                     class="size-6 inline-block text-[#89898B]">
                                     <path stroke-linecap="round" stroke-linejoin="round"
                                         d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
@@ -411,11 +430,12 @@
                     </div>
                 </div>
                 <!-- card 6 -->
-                <div class=" border-2 border-[#1313181A] lg:flex  flex-col lg:flex-row rounded-xl">
+                <div
+                    class=" border-2 border-[#1313181A] lg:flex  flex-col lg:flex-row rounded-xl lg:max-w-xl lg:h-[218px]">
                     <figure class="lg:mt-6 lg:mb-5 lg:ml-6 my-6 mx-6">
-                        <img src="images/10.png" alt="Shoes" class="rounded-xl" />
+                        <img src="images/10.png" alt="Shoes" class="rounded-xl w-11/12 lg:w-[180px]" />
                     </figure>
-                    <div class="card-body">
+                    <div class="mt-6 lg:mx-0 mx-5">
                         <div class="flex gap-4">
                             <p class="text-[#13131899]"><i class="fa-solid fa-star text-[#F99808] mr-1"></i> 5.0</p>
                             <p class="text-[#13131899]"><i class="fa-regular fa-eye mr-1 text-[#13131899]"></i>20
@@ -433,10 +453,10 @@
                                 sagittis.
                             </p>
                         </div>
-                        <div class="lg:flex lg:gap-5 items-center">
+                        <div class="lg:flex lg:gap-5 items-center mt-4">
                             <h3 class="text-button-color font-extrabold text-lg">Price - $22.00</h3>
-                            <p class="text-[#89898B]"> <svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                                    viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                            <p class="text-[#89898B] mt-4 mb-6 lg:mt-0 lg:mb-0"> <svg xmlns="http://www.w3.org/2000/svg"
+                                    fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
                                     class="size-6 inline-block text-[#89898B]">
                                     <path stroke-linecap="round" stroke-linejoin="round"
                                         d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
@@ -664,11 +684,13 @@
             </div>
             <div>
                 <h4 class="text-xl text-white font-bold pb-7">Services</h4>
-                <h5 class="text-white font-medium text-base">Academy <br>
-                    Group Lesson <br>
-                    Private Lesson <br>
-                    Hockeys for kids <br>
-                    Hockeys for Adult</h5>
+                <div class="space-y-5 flex flex-col">
+                    <a class="text-white font-medium text-base">Academy </a>
+                    <a class="text-white font-medium text-base"> Group Lesson </a>
+                    <a class="text-white font-medium text-base">Private Lesson </a>
+                    <a class="text-white font-medium text-base">Hockeys for kids </a>
+                    <a class="text-white font-medium text-base">Hockeys for Adult</a>
+                </div>
             </div>
         </div>
     </footer>
